--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
 sudo apt-get install meson vim git
 sudo apt-get install libglfw3-dev freeglut3-dev  libglut-dev libglu-dev libglew-dev 
-sudo apt-get install libstb-dev
+sudo apt-get install libstb-dev libgsl-dev
 
